--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,15 +9,15 @@
 	color: colors.$secondary;
 }
 
-main {
-	border-top: 4px solid colors.$primary;
-}
-
 .ShadowText {
-	font-size: 124pt;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	padding: 0 5vw;
+	text-transform: uppercase;
+	font-size: calc(24pt + 6vw);
 	font-weight: 900;
-	letter-spacing: 8pt;
-	line-height: 96pt;
 	z-index: -10;
 	color: rgba(colors.$secondary, 0.1);
 }
@@ -27,4 +27,52 @@ main {
 }
 .BorderSecondary {
 	border: 1px solid colors.$secondary;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 5vh;
+	position: relative;
+	text-align: center;
+	margin: 5vh 0;
+
+	@media (min-width: 320px) {
+		padding: 0 2vw;
+	}
+
+	@media (min-width: 2560px) {
+		max-width: 90vw;
+	}
+}
+
+h1 {
+	font-size: calc(24pt + 1vw);
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: calc(1pt + 0.2vw);
+}
+
+body {
+	font-size: calc(12pt + 0.25vw);
+}
+
+.MainDev {
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	border-top: 4px solid colors.$primary;
+}
+
+.AuthorImage {
+	width: 100vw;
+
+	@media (min-width: 480px) {
+		width: 90vw;
+	}
+
+	@media (min-width: 576px) {
+		width: 70vw;
+	}
 }
